force-app/main/default/objects/OriginDestination__c/OriginDestination__c.object-meta.xml
<CustomObject>
    <label>発着地</label>
    <nameField>
        <label>発着地名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>