force-app/main/default/objects/OriginDestination__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>荷主</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>発着地</relationshipLabel>
    <relationshipName>OriginDestinationList</relationshipName>
    <type>Lookup</type>
</CustomField>