force-app/main/default/objects/OriginDestination__c/fields/CautionNote__c.field-meta.xml
<CustomField>
    <fullName>CautionNote__c</fullName>
    <label>注意事項</label>
    <type>TextArea</type>
</CustomField>