force-app/main/default/objects/OriginDestination__c/fields/DeliverySystem__c.field-meta.xml
<CustomField>
    <fullName>DeliverySystem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>納品システム</label>
    <referenceTo>DeliverySystem__c</referenceTo>
    <relationshipLabel>発着地</relationshipLabel>
    <relationshipName>OriginDestinationList</relationshipName>
    <type>Lookup</type>
</CustomField>