force-app/main/default/objects/OriginDestination__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>緯度</label>
    <precision>10</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>