force-app/main/default/objects/OriginDestination__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>北海道</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>青森県</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>岩手県</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>宮城県</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>秋田県</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>山形県</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>福島県</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>茨城県</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>栃木県</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>群馬県</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>埼玉県</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>千葉県</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>東京都</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>神奈川県</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>新潟県</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>富山県</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>石川県</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>福井県</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>山梨県</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>長野県</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>岐阜県</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>静岡県</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>愛知県</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>三重県</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>滋賀県</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>京都府</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>大阪府</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>兵庫県</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>奈良県</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>和歌山県</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>