force-app/main/default/objects/OriginDestination__c/fields/PrefectureLabel_F__c.field-meta.xml
<CustomField>
    <fullName>PrefectureLabel_F__c</fullName>
    <formula>CASE(
    Prefecture__c,
    &quot;1&quot;, &quot;北海道&quot;,
    &quot;2&quot;, &quot;青森県&quot;,
    &quot;3&quot;, &quot;岩手県&quot;,
    &quot;4&quot;, &quot;宮城県&quot;,
    &quot;5&quot;, &quot;秋田県&quot;,
    &quot;6&quot;, &quot;山形県&quot;,
    &quot;7&quot;, &quot;福島県&quot;,
    &quot;8&quot;, &quot;茨城県&quot;,
    &quot;9&quot;, &quot;栃木県&quot;,
    &quot;10&quot;, &quot;群馬県&quot;,
    &quot;11&quot;, &quot;埼玉県&quot;,
    &quot;12&quot;, &quot;千葉県&quot;,
    &quot;13&quot;, &quot;東京都&quot;,
    &quot;14&quot;, &quot;神奈川県&quot;,
    &quot;15&quot;, &quot;新潟県&quot;,
    &quot;16&quot;, &quot;富山県&quot;,
    &quot;17&quot;, &quot;石川県&quot;,
    &quot;18&quot;, &quot;福井県&quot;,
    &quot;19&quot;, &quot;山梨県&quot;,
    &quot;20&quot;, &quot;長野県&quot;,
    &quot;21&quot;, &quot;岐阜県&quot;,
    &quot;22&quot;, &quot;静岡県&quot;,
    &quot;23&quot;, &quot;愛知県&quot;,
    &quot;24&quot;, &quot;三重県&quot;,
    &quot;25&quot;, &quot;滋賀県&quot;,
    &quot;26&quot;, &quot;京都府&quot;,
    &quot;27&quot;, &quot;大阪府&quot;,
    &quot;28&quot;, &quot;兵庫県&quot;,
    &quot;29&quot;, &quot;奈良県&quot;,
    &quot;30&quot;, &quot;和歌山県&quot;,
    &quot;31&quot;, &quot;鳥取県&quot;,
    &quot;32&quot;, &quot;島根県&quot;,
    &quot;33&quot;, &quot;岡山県&quot;,
    &quot;34&quot;, &quot;広島県&quot;,
    &quot;35&quot;, &quot;山口県&quot;,
    &quot;36&quot;, &quot;徳島県&quot;,
    &quot;37&quot;, &quot;香川県&quot;,
    &quot;38&quot;, &quot;愛媛県&quot;,
    &quot;39&quot;, &quot;高知県&quot;,
    &quot;40&quot;, &quot;福岡県&quot;,
    &quot;41&quot;, &quot;佐賀県&quot;,
    &quot;42&quot;, &quot;長崎県&quot;,
    &quot;43&quot;, &quot;熊本県&quot;,
    &quot;44&quot;, &quot;大分県&quot;,
    &quot;45&quot;, &quot;宮崎県&quot;,
    &quot;46&quot;, &quot;鹿児島県&quot;,
    &quot;47&quot;, &quot;沖縄県&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>都道府県（ラベル）</label>
    <type>Text</type>
</CustomField>