force-app/main/default/objects/OriginDestination__c/fields/RouteDeliveryDeny__c.field-meta.xml
<CustomField>
    <fullName>RouteDeliveryDeny__c</fullName>
    <defaultValue>false</defaultValue>
    <label>路線便不可</label>
    <type>Checkbox</type>
</CustomField>