force-app/main/default/objects/OriginDestination__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>町村（町名）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>