force-app/main/default/objects/OriginDestination__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>{!Account__c} + {!Name} を設定する</description>
    <label>一意キー</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>