force-app/main/default/objects/OriginDestination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DeliverySystem__c</columns>
    <columns>Prefecture__c</columns>
    <columns>City__c</columns>
    <columns>Street__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>